@@ -1,0 +1,9 @@
+﻿namespace AjIo.Language
+{
+    using System;
+
+    public interface IMessage
+    {
+        object Send(IObject context, IObject receiver);
+    }
+}
